src/test/testFiles/invalid/semanticErrors/listsSwapMethod.val
let x = List<number>();
x.swap(1, 2);